# zavrsni_nrf7002dk_GNSS

./: CMakeLists.txt  Kconfig  my_hardware.yaml  prj.conf
boards/: nrf7002dk_nrf5340_cpuapp.overlay
src/: config.h  gps.c  gps.h  led_blink.c  led_blink.h  main.c  net_comm.c  net_comm.h
tests/led_blink/: CMakeLists.txt  prj.conf  test_led_blink.c  testcase.yaml
tests/nmea_parsing/: CMakeLists.txt  prj.conf  test_gps_parsing.c  testcase.yaml
tests/nmea_parsing/boards/: nrf7002dk_nrf5340_cpuapp.overlay
